exports[`util.js getCssFiles should return correct results 1`] = `Array []`;

exports[`util.js getCssFiles should return correct results 2`] = `
Array [
  "lib/styles.css:assets/index.css"
]
`;

exports[`util.js getCssFiles should return correct results 3`] = `
Array [
  "a:b",
  "c"
]
`;

exports[`util.js parseEntries should return default file paths 1`] = `
Array [
  Array [
    "bin/mastarm",
    "assets/index.js"
  ]
]
`;

exports[`util.js parseEntries should return inputted file paths 1`] = `
Array [
  Array [
    "a",
    "b"
  ],
  Array [
    "c",
    "assets/c"
  ]
]
`;
